# simple_script

./: .gitignore  .gitmodules  CMakeLists.txt  build.rb  build.sh
extensions/simplescript-syntax-highlights/syntaxes/: simplescript.tmLanguage.json  simplescript.tmLanguage.yaml
lib/: CMakeLists.txt
scripts/: helper.ss  sandbox.ss  test_script.ss
src/: .clang-format  CMakeLists.txt  config.h.in  main.cpp  main.test.cpp
src/ss/: CMakeLists.txt  cfg.cpp  cfg.hpp  chunk.cpp  chunk.hpp  code.cpp  code.hpp  datatypes.cpp  datatypes.hpp  exceptions.cpp  exceptions.hpp  lib.cpp  lib.hpp  util.cpp  util.hpp  vm.cpp  vm.hpp
src/test/: CMakeLists.txt  cfg.test.cpp  chunk.test.cpp  code.test.cpp  datatypes.test.cpp  exceptions.test.cpp  helpers.hpp  lib.test.cpp  util.test.cpp  vm.test.cpp
src/test/scripts/: block_script.ss  break_continue_script.ss  complex_script.ss  fn_script.ss  for_script.ss  if_else_script.ss  if_script.ss  loop_script.ss  match_script.ss  native_script.ss  print_script.ss  var_script.ss  while_script.ss
